--- a/Solucoes.Web/Areas/Conta/Views/Auth/Login.cshtml
+++ b/Solucoes.Web/Areas/Conta/Views/Auth/Login.cshtml
@@ -12,6 +12,15 @@
     </style>
 }
 
+
+@if (ViewBag.ConfirmEmailMessage != null)
+{
+    <div class="alert alert-info alert-dismissible col-sm-4 ms-auto fade show" role="alert">
+        @ViewBag.ConfirmEmailMessage
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
 @if (TempData["SuccessMessage"] != null)
 {
     <div class="alert alert-success alert-dismissible col-sm-4 ms-auto fade show" role="alert">
