Fluxo de redefinição de senha

--- a/Solucoes.Web/Areas/Conta/Views/Auth/ForgotPassword.cshtml
+++ b/Solucoes.Web/Areas/Conta/Views/Auth/ForgotPassword.cshtml
@@ -3,3 +3,52 @@
 @{
     ViewData["Title"] = "Recuperar Senha";
 }
+
+
+@if (ViewBag.SuccessMessage != null)
+{
+    <div class="alert alert-success alert-dismissible col-sm-4 ms-auto fade show" role="alert">
+        @ViewBag.SuccessMessage
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
+<div class="form-container form-container-small">
+    <div class="card shadow">
+        <h2 class="card-header">Recuperar Senha</h2>
+        <div class="card-body">
+            <p class="card-text mb-4">Preencha com o e-mail associado à sua conta para redefinir a sua senha.</p>
+
+            @Html.ValidationSummary(true, "", new { @class = "text-danger my-4" })
+
+            @using (Html.BeginForm("ForgotPassword", "Auth", FormMethod.Post))
+            {
+                <div class="row mb-3">
+                    <div class="col-sm-3">
+                        @Html.LabelFor(m => m.Email, new { @class = "form-label" })
+                    </div>
+                    <div class="col-sm-9">
+                        <div class="input-group">
+                            <span class="input-group-text" id="email-addon">
+                                <i class="fa-solid fa-envelope"></i>
+                            </span>
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @aria_describedby = "email-addon" })
+                        </div>
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <button class="btn btn-primary d-block ms-auto" type="submit">Redefinir Senha</button>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
