--- a/Solucoes.Web/Areas/Projetos/Views/Home/Index.cshtml
+++ b/Solucoes.Web/Areas/Projetos/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Página Inicial - Projetos";
 }
 
-<h1>Bem-vindo, @(ViewBag.Nome)!</h1>
-<p>Esta é a página inicial da área de Projetos.</p>
-<p>Aqui você pode gerenciar seus projetos e tarefas.</p>
+<div class="container">
+    <h1>Bem-vindo, @(ViewBag.Nome)!</h1>
+    <p>Esta é a página inicial da área de Projetos.</p>
+    <p>Aqui você pode gerenciar seus projetos e tarefas.</p>
+</div>
