--- a/Solucoes.Web/Areas/Conta/Views/Auth/Register.cshtml
+++ b/Solucoes.Web/Areas/Conta/Views/Auth/Register.cshtml
@@ -4,15 +4,7 @@
     ViewData["Title"] = "Cadastro";
 }
 
-@section Styles {
-    <style type="text/css">
-        .register-form {
-            max-width: 600px;
-        }
-    </style>
-}
-
-<div class="d-block m-auto w-100 register-form">
+<div class="form-container form-container-small">
     <div class="card shadow">
         <h2 class="card-header">Realizar cadastro</h2>
         <div class="card-body">
@@ -20,7 +12,7 @@
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger mb-3" })
 
-            @using (Html.BeginForm("Register", "Auth", new { area = "Conta" }, FormMethod.Post))
+            @using (Html.BeginForm("Register", "Auth", FormMethod.Post))
             {
                 <div class="row mb-3">
                     <div class="col-sm-3">
