--- a/Solucoes.Web/Areas/Conta/Views/Auth/ResetPassword.cshtml
+++ b/Solucoes.Web/Areas/Conta/Views/Auth/ResetPassword.cshtml
@@ -1,37 +1,21 @@
-﻿@model Solucoes.Web.Areas.Conta.Models.Auth.LoginViewModel
+﻿@model Solucoes.Web.Areas.Conta.Models.Auth.ResetPasswordViewModel
 
 @{
-    ViewData["Title"] = "Login";
-}
-
-@if (ViewBag.ConfirmEmailMessage != null)
-{
-    <div class="alert alert-info alert-dismissible col-sm-4 ms-auto fade show" role="alert">
-        @ViewBag.ConfirmEmailMessage
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-}
-
-@if (TempData["SuccessMessage"] != null)
-{
-    <div class="alert alert-success alert-dismissible col-sm-4 ms-auto fade show" role="alert">
-        @TempData["SuccessMessage"]
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
+    ViewData["Title"] = "Redefinir Senha";
 }
 
 <div class="form-container form-container-small">
     <div class="card shadow">
-        <h2 class="card-header">Realizar login</h2>
+        <h2 class="card-header">Redefinir Senha</h2>
         <div class="card-body">
-            <p class="card-text mb-4">Insira as suas informações de login para entrar na sua conta.</p>
+            <p class="card-text mb-4">Por favor, insira sua nova senha abaixo.</p>
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger my-4" })
 
-            @using (Html.BeginForm("Login", "Auth", FormMethod.Post))
+            @using (Html.BeginForm("ResetPassword", "Auth", FormMethod.Post))
             {
-                @Html.HiddenFor(m => m.ReturnUrl)
-                
+                @Html.HiddenFor(m => m.Token)
+
                 <div class="row mb-3">
                     <div class="col-sm-3">
                         @Html.LabelFor(m => m.Email, new { @class = "form-label" })
@@ -41,7 +25,7 @@
                             <span class="input-group-text" id="email-addon">
                                 <i class="fa-solid fa-envelope"></i>
                             </span>
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @aria_describedby = "email-addon" })
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @aria_describedby = "email-addon", @readonly = "readonly" })
                         </div>
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
@@ -53,28 +37,30 @@
                     <div class="col-sm-9">
                         <div class="input-group">
                             <span class="input-group-text" id="password-addon">
-                                <i class="fa-solid fa-key"></i>
+                                <i class="fa-solid fa-lock"></i>
                             </span>
                             @Html.PasswordFor(m => m.Password, new { @class = "form-control", @aria_describedby = "password-addon" })
                         </div>
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="row mb-3">
-                    <div class="col-sm-9 offset-sm-3">
-                        <div class="form-check">
-                            @Html.CheckBoxFor(m => m.RememberMe, new { @class = "form-check-input" })
-                            @Html.LabelFor(m => m.RememberMe, new { @class = "form-check-label" })
-                        </div>
-                        @Html.ValidationMessageFor(m => m.RememberMe, "", new { @class = "text-danger" })
+                <div class="row mb-4">
+                    <div class="col-sm-3">
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "form-label" })
                     </div>
-                </div>
-                <div class="d-flex justify-content-end mb-3">
-                    <a asp-area="Conta" asp-controller="Auth" asp-action="ForgotPassword">Esqueceu sua senha?</a>
+                    <div class="col-sm-9">
+                        <div class="input-group">
+                            <span class="input-group-text" id="confirm-password-addon">
+                                <i class="fa-solid fa-lock"></i>
+                            </span>
+                            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @aria_describedby = "confirm-password-addon" })
+                        </div>
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <button class="btn btn-primary d-block ms-auto" type="submit">Entrar</button>
+                        <button class="btn btn-primary d-block ms-auto" type="submit">Redefinir Senha</button>
                     </div>
                 </div>
             }
