Tela inicial da área de projetos

--- a/Solucoes.Web/Areas/Conta/Views/Auth/ResetPassword.cshtml
+++ b/Solucoes.Web/Areas/Conta/Views/Auth/ResetPassword.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Redefinir Senha";
 }
 
-<div class="form-container form-container-small">
+<div class="form-container form-container-small py-5">
     <div class="card shadow">
         <h2 class="card-header">Redefinir Senha</h2>
         <div class="card-body">
