--- a/Solucoes.Web/Areas/Conta/Views/Auth/ConfirmEmail.cshtml
+++ b/Solucoes.Web/Areas/Conta/Views/Auth/ConfirmEmail.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Confirmar E-mail";
 }
 
-<div class="container">
+<div class="container py-5">
     @if (Model.Succeeded)
     {
         <h1>E-mail confirmado com sucesso!</h1>
