--- a/Solucoes.Web/Areas/Conta/Views/Auth/ForgotPassword.cshtml
+++ b/Solucoes.Web/Areas/Conta/Views/Auth/ForgotPassword.cshtml
@@ -13,7 +13,7 @@
     </div>
 }
 
-<div class="form-container form-container-small">
+<div class="form-container form-container-small py-5">
     <div class="card shadow">
         <h2 class="card-header">Recuperar Senha</h2>
         <div class="card-body">
