--- a/Solucoes.Web/Areas/Conta/Views/Auth/Login.cshtml
+++ b/Solucoes.Web/Areas/Conta/Views/Auth/Login.cshtml
@@ -20,7 +20,7 @@
     </div>
 }
 
-<div class="form-container form-container-small">
+<div class="form-container form-container-small py-5">
     <div class="card shadow">
         <h2 class="card-header">Realizar login</h2>
         <div class="card-body">
