--- a/Solucoes.Web/Areas/Conta/Views/Auth/Register.cshtml
+++ b/Solucoes.Web/Areas/Conta/Views/Auth/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Cadastro";
 }
 
-<div class="form-container form-container-small">
+<div class="form-container form-container-small py-5">
     <div class="card shadow">
         <h2 class="card-header">Realizar cadastro</h2>
         <div class="card-body">
