--- a/Solucoes.Web/Views/Home/Index.cshtml
+++ b/Solucoes.Web/Views/Home/Index.cshtml
@@ -1,4 +1,3 @@
-﻿<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+﻿<div class="container py-5">
+    <h1 class="display-4 text-center">Bem-vindo!</h1>
 </div>
