--- a/Solucoes.Web/Views/Shared/_Layout.cshtml
+++ b/Solucoes.Web/Views/Shared/_Layout.cshtml
@@ -1,53 +1,62 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@(ViewData["Title"] != null ? ViewData["Title"] + " - " : "") Solucoes</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/lib/fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    @RenderSection("Styles", required: false)
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@(ViewData["Title"] != null ? ViewData["Title"] + " - " : "") Solucoes</title>
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="~/lib/fontawesome/css/all.min.css" />
+	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+	@RenderSection("Styles", required: false)
 </head>
 <body>
-    <header class="shadow">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Solucoes</a>
-                @if (User.Identity?.IsAuthenticated == true)
-                {
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
+	<header class="shadow">
+		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Solucoes</a>
+				@if (User.Identity?.IsAuthenticated == true)
+				{
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+							aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+						<ul class="navbar-nav flex-grow-1">
+							<li class="nav-item">
                                 <a class="nav-link text-light" asp-area="Projetos" asp-controller="Home" asp-action="Index">Projetos</a>
-                            </li>
-                        </ul>
-                        <a class="btn btn-light" asp-area="Conta" asp-controller="Auth" asp-action="Logout">Sair</a>
-                    </div>
-                }
-                else
-                {
-                    <div class="d-flex align-items-center justify-content-end">
-                        <a class="btn btn-link text-light" asp-area="Conta" asp-controller="Auth" asp-action="Register">Cadastrar-se</a>
-                        <a class="btn btn-light" asp-area="Conta" asp-controller="Auth" asp-action="Login">Entrar</a>
-                    </div>
-                }
-            </div>
-        </nav>
-    </header>
+							</li>
+						</ul>
+						<div class="dropdown">
+							<button type="button" class="btn btn-light btn-sm dropdown-toggle" id="logged-user-dropdown" data-bs-toggle="dropdown" aria-expanded="false">
+								<i class="fa-solid fa-user"></i>
+							</button>
+							<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="logged-user-dropdown">
+								<li><h6 class="dropdown-header">@User.Identity?.Name</h6></li>
+								<li><hr class="dropdown-divider" /></li>
+								<li><a class="dropdown-item" asp-area="Conta" asp-controller="Auth" asp-action="Logout">Sair</a></li>
+							</ul>
+						</div>
+					</div>
+				}
+				else
+				{
+					<div class="d-flex align-items-center justify-content-end">
+						<a class="btn btn-link text-light" asp-area="Conta" asp-controller="Auth" asp-action="Register">Cadastrar-se</a>
+						<a class="btn btn-light" asp-area="Conta" asp-controller="Auth" asp-action="Login">Entrar</a>
+					</div>
+				}
+			</div>
+		</nav>
+	</header>
 
-    <main class="px-3 py-5">
-        @RenderBody()
-    </main>
+	<main>
+		@RenderBody()
+	</main>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/fontawesome/js/all.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/lib/fontawesome/js/all.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
