--- a/Solucoes.Web/Areas/Projetos/Views/Home/_ModalCriarProjeto.cshtml
+++ b/Solucoes.Web/Areas/Projetos/Views/Home/_ModalCriarProjeto.cshtml
@@ -44,7 +44,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-light" data-bs-dismiss="modal">Fechar</button>
-				<button type="button" class="btn btn-primary">Adicionar</button>
+				<button id="submitFormCriarProjeto" type="button" class="btn btn-primary">Adicionar</button>
 			</div>
 		</div>
 	</div>
